# machine-learning-project

./: .gitignore  pyproject.toml
src/: ASKL20_1.ipynb  ASKL20_2.ipynb  ASKL20_3.ipynb  ASKL20_4.ipynb  OpenML_CC18_Fetch.ipynb  OpenML_CC18_Preprocessing.ipynb  Resultados_completos.csv  analise_estatistica.py  autogluon_1_6_9.ipynb  autogluon_2_5.ipynb  autogluon_3_7_10.ipynb  autogluon_4_8.ipynb  check_class.py  check_mlp.py  fetch_openml.py  juntar_autosk.py  juntar_csv.py  mlp.py  preprocessing.py  resultados_autogluon.csv  resultados_autosklearn.csv  resultados_cc18_sem_automl_cv.csv  resultados_cc18_sem_automl_cv2.csv  sort_csv.py  statistical_experiments.py  tabela_1a_metricas_detalhadas.csv  tabela_1b_metricas_formatadas.csv  tabela_2_ranks_medios.csv  tabela_3_teste_friedman.csv  tabela_4_nemenyi_acc.csv  tabela_4_nemenyi_auc.csv  tabela_4_nemenyi_ce.csv  train.py  train_2.py
