[tool.poetry]
name = "machine-learning-project"
version = "0.1.0"
description = ""
authors = ["hopperjc <mhjc@cin.ufpe.br>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12.4"
openml = ">=0.15.1,<0.16.0"
joblib = ">=1.5.1,<2.0.0"
lightgbm = ">=4.6.0,<5.0.0"
catboost = ">=1.2.8,<2.0.0"
xgboost = ">=3.0.2,<4.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
torch = ">=2.7.0,<3.0.0"
scikit-posthocs = ">=0.11.4,<0.12.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
